# claude-sessions-manager

./: .gitignore  README.md  pyproject.toml  setup.py
.claude/skills/run-claude-session-monitor/: SKILL.md  driver.py
csm/: __init__.py  cli.py  config.py  correlate.py  labels.py  launcher.py  models.py  redact.py  server.py
csm/discovery/: __init__.py  base.py  files.py  mock.py  processes.py
csm/web/: classic.html  index.html
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md  mindmap-api.md
mock_data/: mock_sessions.json
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_correlate.py  test_files.py  test_launcher.py  test_mindmap.py  test_processes.py  test_redact.py
