[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-session-monitor"
version = "0.1.0"
description = "Local observability tool (top/htop-style + web GUI) for Claude Code sessions"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
    "rich>=13",
    "pyyaml>=6",
    "pydantic>=2",
]

[project.optional-dependencies]
web = ["fastapi>=0.100", "uvicorn>=0.20"]
dev = ["pytest>=7", "httpx>=0.24"]

[project.scripts]
csm = "csm.cli:main"
claude-session-monitor = "csm.cli:main"

[tool.setuptools.packages.find]
include = ["csm*"]

[tool.setuptools.package-data]
csm = ["web/*.html"]
